--- a/Homework6/genome_hw_6.ipynb
+++ b/Homework6/genome_hw_6.ipynb
@@ -35,10 +35,105 @@
     {
      "data": {
       "text/plain": [
-       "({0: -0.1077, 1: 0.4772, 2: 1.0622, 3: 1.6748}, -20.0, 20.0)"
+       "0.14936377712374954"
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N_CORRECTION = 8422401 # number of Ns in chr16\n",
+    "ADJ_CHROM_SIZE = read_count.shape[0] - N_CORRECTION\n",
+    "ADJ_MEAN_COUNT = np.sum(read_count) / ADJ_CHROM_SIZE\n",
+    "ADJ_MEAN_COUNT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X (counts):\t[0 1 2 3]\n",
+      "Background:\t[70455754 10523537   785917    39129]\n",
+      "Elevated CN:\t[65385664 14649374  1641064   122557]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import poisson\n",
+    "\n",
+    "# compute means of model Poisson distributions\n",
+    "mu_0 = ADJ_MEAN_COUNT\n",
+    "mu_1 = ADJ_MEAN_COUNT * 1.5\n",
+    "\n",
+    "# create model Poisson distributions given N observed\n",
+    "x = np.arange(4)\n",
+    "y_0 = (poisson.pmf(mu=mu_0, k=x) * ADJ_CHROM_SIZE).astype(\"int64\")\n",
+    "y_1 = (poisson.pmf(mu=mu_1, k=x) * ADJ_CHROM_SIZE).astype(\"int64\")\n",
+    "\n",
+    "print(f\"X (counts):\\t{x}\")\n",
+    "print(f\"Background:\\t{y_0}\")\n",
+    "print(f\"Elevated CN:\\t{y_1}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X (counts):\t[0 1 2 3]\n",
+      "Background:\t[0.8613, 0.1286, 0.0096, 0.0005]\n",
+      "Elevated CN:\t[0.7993, 0.1791, 0.0201, 0.0016]\n",
+      "\n",
+      "Weights:\t[-0.1077  0.4772  1.0622  1.6748]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compute means of model Poisson distributions\n",
+    "mu_0 = ADJ_MEAN_COUNT\n",
+    "mu_1 = ADJ_MEAN_COUNT * 1.5\n",
+    "\n",
+    "# create model Poisson distributions given N observed\n",
+    "x = np.arange(4)\n",
+    "y_0 = poisson.pmf(mu=mu_0, k=x)\n",
+    "y_1 = poisson.pmf(mu=mu_1, k=x)\n",
+    "\n",
+    "# truncate distributions\n",
+    "y_0[-1] += 1.0 - np.sum(y_0)\n",
+    "y_1[-1] += 1.0 - np.sum(y_1)\n",
+    "\n",
+    "# compute LLR scoring scheme\n",
+    "weights = np.log2(y_1 / y_0)\n",
+    "\n",
+    "print(f\"X (counts):\\t{x}\")\n",
+    "print(f\"Background:\\t{[y.round(4) for y in y_0]}\")\n",
+    "print(f\"Elevated CN:\\t{[y.round(4) for y in y_1]}\")\n",
+    "print(f\"\\nWeights:\\t{weights.round(4)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({0: -0.1077, 1: 0.4772, 2: 1.0622, 3: 1.6748}, -20.0, 20.0)"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
