--- a/Homework6/genome_hw_6.ipynb
+++ b/Homework6/genome_hw_6.ipynb
@@ -29,25 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.14936377712374954"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "N_CORRECTION = 8422401 # number of Ns in chr16\n",
     "ADJ_CHROM_SIZE = read_count.shape[0] - N_CORRECTION\n",
-    "ADJ_MEAN_COUNT = np.sum(read_count) / ADJ_CHROM_SIZE\n",
-    "ADJ_MEAN_COUNT"
+    "ADJ_MEAN_COUNT = np.sum(read_count) / ADJ_CHROM_SIZE"
    ]
   },
   {
