--- a/Homework9/genome_hw_9.ipynb
+++ b/Homework9/genome_hw_9.ipynb
@@ -85,206 +85,206 @@
       "2,2=0.90000\n",
       "\n",
       "Emission Probabilities:\n",
-      "1,A--=0.15403\n",
-      "1,A-A=0.00725\n",
-      "1,A-C=0.00633\n",
-      "1,A-G=0.02133\n",
-      "1,A-T=0.00412\n",
-      "1,AA-=0.01285\n",
-      "1,AAA=0.00270\n",
-      "1,AAC=0.00150\n",
-      "1,AAG=0.00253\n",
-      "1,AAT=0.00045\n",
-      "1,AC-=0.01318\n",
-      "1,ACA=0.00171\n",
-      "1,ACC=0.00333\n",
-      "1,ACG=0.00280\n",
-      "1,ACT=0.00049\n",
-      "1,AG-=0.03189\n",
-      "1,AGA=0.00211\n",
-      "1,AGC=0.00198\n",
+      "1,A--=0.00059\n",
+      "1,A-A=0.01146\n",
+      "1,A-C=0.00086\n",
+      "1,A-G=0.00235\n",
+      "1,A-T=0.00085\n",
+      "1,AA-=0.00412\n",
+      "1,AAA=0.15403\n",
+      "1,AAC=0.00725\n",
+      "1,AAG=0.02133\n",
+      "1,AAT=0.00633\n",
+      "1,AC-=0.00045\n",
+      "1,ACA=0.01285\n",
+      "1,ACC=0.00270\n",
+      "1,ACG=0.00253\n",
+      "1,ACT=0.00150\n",
+      "1,AG-=0.00111\n",
+      "1,AGA=0.03189\n",
+      "1,AGC=0.00211\n",
       "1,AGG=0.01328\n",
-      "1,AGT=0.00111\n",
-      "1,AT-=0.01146\n",
-      "1,ATA=0.00086\n",
-      "1,ATC=0.00085\n",
-      "1,ATG=0.00235\n",
-      "1,ATT=0.00059\n",
-      "1,C--=0.00335\n",
-      "1,C-A=0.00864\n",
-      "1,C-C=0.00263\n",
-      "1,C-G=0.00132\n",
-      "1,C-T=0.00036\n",
-      "1,CA-=0.00417\n",
-      "1,CAA=0.08468\n",
-      "1,CAC=0.01749\n",
-      "1,CAG=0.00379\n",
-      "1,CAT=0.00233\n",
-      "1,CC-=0.00203\n",
-      "1,CCA=0.02829\n",
-      "1,CCC=0.01342\n",
-      "1,CCG=0.00181\n",
-      "1,CCT=0.00101\n",
-      "1,CG-=0.00127\n",
-      "1,CGA=0.00689\n",
-      "1,CGC=0.00216\n",
+      "1,AGT=0.00198\n",
+      "1,AT-=0.00049\n",
+      "1,ATA=0.01318\n",
+      "1,ATC=0.00171\n",
+      "1,ATG=0.00280\n",
+      "1,ATT=0.00333\n",
+      "1,C--=0.00036\n",
+      "1,C-A=0.00072\n",
+      "1,C-C=0.00699\n",
+      "1,C-G=0.00058\n",
+      "1,C-T=0.00210\n",
+      "1,CA-=0.00036\n",
+      "1,CAA=0.00335\n",
+      "1,CAC=0.00864\n",
+      "1,CAG=0.00132\n",
+      "1,CAT=0.00263\n",
+      "1,CC-=0.00233\n",
+      "1,CCA=0.00417\n",
+      "1,CCC=0.08468\n",
+      "1,CCG=0.00379\n",
+      "1,CCT=0.01749\n",
+      "1,CG-=0.00028\n",
+      "1,CGA=0.00127\n",
+      "1,CGC=0.00689\n",
       "1,CGG=0.00203\n",
-      "1,CGT=0.00028\n",
-      "1,CT-=0.00072\n",
-      "1,CTA=0.00699\n",
-      "1,CTC=0.00210\n",
-      "1,CTG=0.00058\n",
-      "1,CTT=0.00036\n",
-      "1,G--=0.00332\n",
-      "1,G-A=0.00282\n",
-      "1,G-C=0.01320\n",
-      "1,G-G=0.00171\n",
-      "1,G-T=0.00049\n",
-      "1,GA-=0.00198\n",
-      "1,GAA=0.01328\n",
-      "1,GAC=0.03190\n",
-      "1,GAG=0.00211\n",
-      "1,GAT=0.00111\n",
-      "1,GC-=0.00635\n",
-      "1,GCA=0.02137\n",
-      "1,GCC=0.15465\n",
-      "1,GCG=0.00726\n",
-      "1,GCT=0.00409\n",
-      "1,GG-=0.00150\n",
-      "1,GGA=0.00252\n",
-      "1,GGC=0.01285\n",
-      "1,GGG=0.00271\n",
-      "1,GGT=0.00045\n",
-      "1,GT-=0.00084\n",
-      "1,GTA=0.00235\n",
-      "1,GTC=0.01149\n",
-      "1,GTG=0.00086\n",
-      "1,GTT=0.00057\n",
-      "1,T--=0.01338\n",
-      "1,T-A=0.00181\n",
-      "1,T-C=0.00203\n",
-      "1,T-G=0.02824\n",
-      "1,T-T=0.00099\n",
-      "1,TA-=0.00216\n",
-      "1,TAA=0.00202\n",
-      "1,TAC=0.00127\n",
-      "1,TAG=0.00687\n",
-      "1,TAT=0.00028\n",
-      "1,TC-=0.00262\n",
-      "1,TCA=0.00132\n",
-      "1,TCC=0.00335\n",
-      "1,TCG=0.00865\n",
-      "1,TCT=0.00036\n",
-      "1,TG-=0.01747\n",
-      "1,TGA=0.00380\n",
-      "1,TGC=0.00417\n",
-      "1,TGG=0.08460\n",
-      "1,TGT=0.00231\n",
-      "1,TT-=0.00211\n",
-      "1,TTA=0.00059\n",
-      "1,TTC=0.00072\n",
-      "1,TTG=0.00698\n",
-      "1,TTT=0.00035\n",
-      "2,A--=0.22082\n",
-      "2,A-A=0.00198\n",
-      "2,A-C=0.00101\n",
-      "2,A-G=0.00524\n",
-      "2,A-T=0.00030\n",
-      "2,AA-=0.00309\n",
-      "2,AAA=0.00113\n",
-      "2,AAC=0.00021\n",
-      "2,AAG=0.00048\n",
-      "2,AAT=0.00003\n",
-      "2,AC-=0.00203\n",
-      "2,ACA=0.00027\n",
-      "2,ACC=0.00069\n",
-      "2,ACG=0.00041\n",
-      "2,ACT=0.00003\n",
-      "2,AG-=0.00761\n",
-      "2,AGA=0.00041\n",
-      "2,AGC=0.00025\n",
+      "1,CGT=0.00216\n",
+      "1,CT-=0.00101\n",
+      "1,CTA=0.00203\n",
+      "1,CTC=0.02829\n",
+      "1,CTG=0.00181\n",
+      "1,CTT=0.01342\n",
+      "1,G--=0.00035\n",
+      "1,G-A=0.00211\n",
+      "1,G-C=0.00059\n",
+      "1,G-G=0.00698\n",
+      "1,G-T=0.00072\n",
+      "1,GA-=0.00099\n",
+      "1,GAA=0.01338\n",
+      "1,GAC=0.00181\n",
+      "1,GAG=0.02824\n",
+      "1,GAT=0.00203\n",
+      "1,GC-=0.00028\n",
+      "1,GCA=0.00216\n",
+      "1,GCC=0.00202\n",
+      "1,GCG=0.00687\n",
+      "1,GCT=0.00127\n",
+      "1,GG-=0.00231\n",
+      "1,GGA=0.01747\n",
+      "1,GGC=0.00380\n",
+      "1,GGG=0.08460\n",
+      "1,GGT=0.00417\n",
+      "1,GT-=0.00036\n",
+      "1,GTA=0.00262\n",
+      "1,GTC=0.00132\n",
+      "1,GTG=0.00865\n",
+      "1,GTT=0.00335\n",
+      "1,T--=0.00057\n",
+      "1,T-A=0.00084\n",
+      "1,T-C=0.00235\n",
+      "1,T-G=0.00086\n",
+      "1,T-T=0.01149\n",
+      "1,TA-=0.00049\n",
+      "1,TAA=0.00332\n",
+      "1,TAC=0.00282\n",
+      "1,TAG=0.00171\n",
+      "1,TAT=0.01320\n",
+      "1,TC-=0.00111\n",
+      "1,TCA=0.00198\n",
+      "1,TCC=0.01328\n",
+      "1,TCG=0.00211\n",
+      "1,TCT=0.03190\n",
+      "1,TG-=0.00045\n",
+      "1,TGA=0.00150\n",
+      "1,TGC=0.00252\n",
+      "1,TGG=0.00271\n",
+      "1,TGT=0.01285\n",
+      "1,TT-=0.00409\n",
+      "1,TTA=0.00635\n",
+      "1,TTC=0.02137\n",
+      "1,TTG=0.00726\n",
+      "1,TTT=0.15465\n",
+      "2,A--=0.00012\n",
+      "2,A-A=0.00058\n",
+      "2,A-C=0.00005\n",
+      "2,A-G=0.00013\n",
+      "2,A-T=0.00003\n",
+      "2,AA-=0.00030\n",
+      "2,AAA=0.22082\n",
+      "2,AAC=0.00198\n",
+      "2,AAG=0.00524\n",
+      "2,AAT=0.00101\n",
+      "2,AC-=0.00003\n",
+      "2,ACA=0.00309\n",
+      "2,ACC=0.00113\n",
+      "2,ACG=0.00048\n",
+      "2,ACT=0.00021\n",
+      "2,AG-=0.00007\n",
+      "2,AGA=0.00761\n",
+      "2,AGC=0.00041\n",
       "2,AGG=0.00469\n",
-      "2,AGT=0.00007\n",
-      "2,AT-=0.00058\n",
-      "2,ATA=0.00005\n",
-      "2,ATC=0.00003\n",
-      "2,ATG=0.00013\n",
-      "2,ATT=0.00012\n",
-      "2,C--=0.00112\n",
-      "2,C-A=0.00316\n",
-      "2,C-C=0.00035\n",
-      "2,C-G=0.00036\n",
-      "2,C-T=0.00003\n",
-      "2,CA-=0.00142\n",
-      "2,CAA=0.21487\n",
-      "2,CAC=0.00527\n",
-      "2,CAG=0.00191\n",
-      "2,CAT=0.00039\n",
-      "2,CC-=0.00028\n",
-      "2,CCA=0.00917\n",
-      "2,CCC=0.00352\n",
-      "2,CCG=0.00043\n",
-      "2,CCT=0.00009\n",
-      "2,CG-=0.00028\n",
-      "2,CGA=0.00301\n",
-      "2,CGC=0.00042\n",
+      "2,AGT=0.00025\n",
+      "2,AT-=0.00003\n",
+      "2,ATA=0.00203\n",
+      "2,ATC=0.00027\n",
+      "2,ATG=0.00041\n",
+      "2,ATT=0.00069\n",
+      "2,C--=0.00016\n",
+      "2,C-A=0.00004\n",
+      "2,C-C=0.00076\n",
+      "2,C-G=0.00006\n",
+      "2,C-T=0.00011\n",
+      "2,CA-=0.00003\n",
+      "2,CAA=0.00112\n",
+      "2,CAC=0.00316\n",
+      "2,CAG=0.00036\n",
+      "2,CAT=0.00035\n",
+      "2,CC-=0.00039\n",
+      "2,CCA=0.00142\n",
+      "2,CCC=0.21487\n",
+      "2,CCG=0.00191\n",
+      "2,CCT=0.00527\n",
+      "2,CG-=0.00004\n",
+      "2,CGA=0.00028\n",
+      "2,CGC=0.00301\n",
       "2,CGG=0.00123\n",
-      "2,CGT=0.00004\n",
-      "2,CT-=0.00004\n",
-      "2,CTA=0.00076\n",
-      "2,CTC=0.00011\n",
-      "2,CTG=0.00006\n",
-      "2,CTT=0.00016\n",
-      "2,G--=0.00069\n",
-      "2,G-A=0.00040\n",
-      "2,G-C=0.00202\n",
-      "2,G-G=0.00026\n",
-      "2,G-T=0.00003\n",
-      "2,GA-=0.00024\n",
-      "2,GAA=0.00475\n",
-      "2,GAC=0.00764\n",
-      "2,GAG=0.00041\n",
-      "2,GAT=0.00007\n",
-      "2,GC-=0.00102\n",
-      "2,GCA=0.00520\n",
-      "2,GCC=0.22090\n",
-      "2,GCG=0.00199\n",
-      "2,GCT=0.00031\n",
-      "2,GG-=0.00022\n",
-      "2,GGA=0.00047\n",
-      "2,GGC=0.00304\n",
-      "2,GGG=0.00113\n",
-      "2,GGT=0.00003\n",
+      "2,CGT=0.00042\n",
+      "2,CT-=0.00009\n",
+      "2,CTA=0.00028\n",
+      "2,CTC=0.00917\n",
+      "2,CTG=0.00043\n",
+      "2,CTT=0.00352\n",
+      "2,G--=0.00016\n",
+      "2,G-A=0.00011\n",
+      "2,G-C=0.00006\n",
+      "2,G-G=0.00076\n",
+      "2,G-T=0.00004\n",
+      "2,GA-=0.00009\n",
+      "2,GAA=0.00351\n",
+      "2,GAC=0.00043\n",
+      "2,GAG=0.00914\n",
+      "2,GAT=0.00029\n",
+      "2,GC-=0.00004\n",
+      "2,GCA=0.00041\n",
+      "2,GCC=0.00123\n",
+      "2,GCG=0.00301\n",
+      "2,GCT=0.00028\n",
+      "2,GG-=0.00038\n",
+      "2,GGA=0.00525\n",
+      "2,GGC=0.00190\n",
+      "2,GGG=0.21461\n",
+      "2,GGT=0.00142\n",
       "2,GT-=0.00003\n",
-      "2,GTA=0.00014\n",
-      "2,GTC=0.00059\n",
-      "2,GTG=0.00005\n",
-      "2,GTT=0.00013\n",
-      "2,T--=0.00351\n",
-      "2,T-A=0.00043\n",
-      "2,T-C=0.00029\n",
-      "2,T-G=0.00914\n",
-      "2,T-T=0.00009\n",
-      "2,TA-=0.00041\n",
-      "2,TAA=0.00123\n",
-      "2,TAC=0.00028\n",
-      "2,TAG=0.00301\n",
-      "2,TAT=0.00004\n",
-      "2,TC-=0.00035\n",
-      "2,TCA=0.00034\n",
-      "2,TCC=0.00110\n",
-      "2,TCG=0.00315\n",
-      "2,TCT=0.00003\n",
-      "2,TG-=0.00525\n",
-      "2,TGA=0.00190\n",
-      "2,TGC=0.00142\n",
-      "2,TGG=0.21461\n",
-      "2,TGT=0.00038\n",
-      "2,TT-=0.00011\n",
-      "2,TTA=0.00006\n",
-      "2,TTC=0.00004\n",
-      "2,TTG=0.00076\n",
-      "2,TTT=0.00016\n"
+      "2,GTA=0.00035\n",
+      "2,GTC=0.00034\n",
+      "2,GTG=0.00315\n",
+      "2,GTT=0.00110\n",
+      "2,T--=0.00013\n",
+      "2,T-A=0.00003\n",
+      "2,T-C=0.00014\n",
+      "2,T-G=0.00005\n",
+      "2,T-T=0.00059\n",
+      "2,TA-=0.00003\n",
+      "2,TAA=0.00069\n",
+      "2,TAC=0.00040\n",
+      "2,TAG=0.00026\n",
+      "2,TAT=0.00202\n",
+      "2,TC-=0.00007\n",
+      "2,TCA=0.00024\n",
+      "2,TCC=0.00475\n",
+      "2,TCG=0.00041\n",
+      "2,TCT=0.00764\n",
+      "2,TG-=0.00003\n",
+      "2,TGA=0.00022\n",
+      "2,TGC=0.00047\n",
+      "2,TGG=0.00113\n",
+      "2,TGT=0.00304\n",
+      "2,TT-=0.00031\n",
+      "2,TTA=0.00102\n",
+      "2,TTC=0.00520\n",
+      "2,TTG=0.00199\n",
+      "2,TTT=0.22090\n"
      ]
     }
    ],
@@ -300,10 +300,12 @@
     "print(\"2,2={:.5f}\".format(a[1,1]))\n",
     "\n",
     "print(\"\\nEmission Probabilities:\")\n",
-    "for i, symbol in enumerate(sorted(symbol_to_int.keys())):\n",
-    "    print(\"1,{}={:.5f}\".format(symbol, b[0, i]))\n",
-    "for i, symbol in enumerate(sorted(symbol_to_int.keys())):\n",
-    "    print(\"2,{}={:.5f}\".format(symbol, b[1, i]))"
+    "state1_freqz = dict(zip(symbol_to_int.keys(), b[0]))\n",
+    "state2_freqz = dict(zip(symbol_to_int.keys(), b[1]))\n",
+    "for symbol in sorted(state1_freqz):\n",
+    "    print(\"1,{}={:.5f}\".format(symbol, state1_freqz[symbol]))\n",
+    "for symbol in sorted(state2_freqz):\n",
+    "    print(\"2,{}={:.5f}\".format(symbol, state2_freqz[symbol]))"
    ]
   },
   {
@@ -535,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
