--- a/Genome541/Homework2/genome_hw_2.ipynb
+++ b/Genome541/Homework2/genome_hw_2.ipynb
@@ -2,9 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "219e483a8d144c3ba5c967314107276e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyRosetta-4 2023 [Rosetta PyRosetta4.conda.m1.cxx11thread.serialization.python39.Release 2023.12+release.1d8714894eec1dac6443b64d144d220c4aed4f9c 2023-03-20T20:16:16] retrieved from: http://www.pyrosetta.org\n",
+      "(C) Copyright Rosetta Commons Member Institutions. Created in JHU by Sergey Lyskov and PyRosetta Team.\n"
+     ]
+    }
+   ],
    "source": [
     "import nglview as nv\n",
     "import pyrosetta\n",
@@ -70,36 +91,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "core.scoring.etable: Starting energy table calculation\n",
-      "core.scoring.etable: smooth_etable: changing atr/rep split to bottom of energy well\n",
-      "core.scoring.etable: smooth_etable: spline smoothing lj etables (maxdis = 6)\n",
-      "core.scoring.etable: smooth_etable: spline smoothing solvation etables (max_dis = 6)\n",
-      "core.scoring.etable: Finished calculating energy tables.\n",
-      "basic.io.database: Database file opened: scoring/score_functions/hbonds/ref2015_params/HBPoly1D.csv\n",
-      "basic.io.database: Database file opened: scoring/score_functions/hbonds/ref2015_params/HBFadeIntervals.csv\n",
-      "basic.io.database: Database file opened: scoring/score_functions/hbonds/ref2015_params/HBEval.csv\n",
-      "basic.io.database: Database file opened: scoring/score_functions/hbonds/ref2015_params/DonStrength.csv\n",
-      "basic.io.database: Database file opened: scoring/score_functions/hbonds/ref2015_params/AccStrength.csv\n",
-      "core.chemical.GlobalResidueTypeSet: Finished initializing fa_standard residue type set.  Created 985 residue types\n",
-      "core.chemical.GlobalResidueTypeSet: Total time to initialize 0.628718 seconds.\n",
-      "basic.io.database: Database file opened: scoring/score_functions/rama/fd/all.ramaProb\n",
-      "basic.io.database: Database file opened: scoring/score_functions/rama/fd/prepro.ramaProb\n",
-      "basic.io.database: Database file opened: scoring/score_functions/omega/omega_ppdep.all.txt\n",
-      "basic.io.database: Database file opened: scoring/score_functions/omega/omega_ppdep.gly.txt\n",
-      "basic.io.database: Database file opened: scoring/score_functions/omega/omega_ppdep.pro.txt\n",
-      "basic.io.database: Database file opened: scoring/score_functions/omega/omega_ppdep.valile.txt\n",
-      "basic.io.database: Database file opened: scoring/score_functions/P_AA_pp/P_AA\n",
-      "basic.io.database: Database file opened: scoring/score_functions/P_AA_pp/P_AA_n\n",
-      "core.scoring.P_AA: shapovalov_lib::shap_p_aa_pp_smooth_level of 1( aka low_smooth ) got activated.\n",
-      "basic.io.database: Database file opened: scoring/score_functions/P_AA_pp/shapovalov/10deg/kappa131/a20.prop\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "scorefxn = pyrosetta.rosetta.core.scoring.ScoreFunctionFactory.create_score_function(\"ref2015_cst.wts\")\n",
     "def relax_pose(pose, macrocycles=5):\n",
@@ -163,11 +155,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fold(\"5gua_A\", fold_fn=fold_protein, show=True, save=False)\n",
+    "# fold(\"5gua_A\", fold_fn=fold_protein, show=True, save=False)\n",
     "# fold(\"5h9h_C\", fold_fn=fold_protein, show=True, save=False)\n",
     "# fold(\"6ipy_A\", fold_fn=fold_protein, show=True, save=False)\n",
     "# fold(\"6qfj_A\", fold_fn=fold_protein, show=True, save=False)"
@@ -175,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,11 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "relax_native(\"5gua_A\", show=True)\n",
+    "# relax_native(\"5gua_A\", show=True)\n",
     "# relax_native(\"5h9h_C\", show=True)\n",
     "# relax_native(\"6ipy_A\", show=True)\n",
     "# relax_native(\"6qfj_A\", show=True)"
@@ -202,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,10 +251,14 @@
     "    set_backbone_torsionsV2(pose)\n",
     "    display(nv.show_rosetta(pose)) if show else None\n",
     "\n",
-    "    for constraint in get_constraints_with_file(protein + \".contacts\"):\n",
+    "    constraints = get_constraints_with_file(protein + \".contacts\")\n",
+    "    threshold = 5\n",
+    "    for constraint in constraints:\n",
+    "        if abs(constraint[1] - constraint[0]) > threshold:\n",
+    "            relax_pose(pose, macrocycles=1)\n",
+    "            threshold += 5\n",
     "        set_constraints(pose, constraint[0], constraint[1])\n",
-    "        relax_pose(pose, macrocycles=1)\n",
-    "    score = scorefxn.score(pose)\n",
+    "    score = relax_pose(pose, macrocycles=1)\n",
     "    display(nv.show_rosetta(pose)) if show else None\n",
     "\n",
     "    return (pose, score) if not show else score\n",
@@ -272,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,10 +336,14 @@
     "    set_backbone_torsionsV3(pose, psipred)\n",
     "    display(nv.show_rosetta(pose)) if show else None\n",
     "\n",
-    "    for constraint in get_constraints_with_file(protein + \".contacts\"):\n",
+    "    constraints = get_constraints_with_file(protein + \".contacts\")\n",
+    "    threshold = 5\n",
+    "    for constraint in constraints:\n",
+    "        if abs(constraint[1] - constraint[0]) > threshold:\n",
+    "            relax_pose(pose, macrocycles=1)\n",
+    "            threshold += 5\n",
     "        set_constraints(pose, constraint[0], constraint[1])\n",
-    "        relax_pose(pose, macrocycles=1)\n",
-    "    score = scorefxn.score(pose)\n",
+    "    score = relax_pose(pose, macrocycles=1)\n",
     "    display(nv.show_rosetta(pose)) if show else None\n",
     "\n",
     "    return (pose, score) if not show else score\n",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,10 +385,14 @@
     "        pmm.apply(pose)\n",
     "    display(nv.show_rosetta(pose)) if show else None\n",
     "\n",
-    "    for constraint in get_constraints_with_file(protein + \".contacts\"):\n",
+    "    constraints = get_constraints_with_file(protein + \".contacts\")\n",
+    "    threshold = 5\n",
+    "    for constraint in constraints:\n",
+    "        if abs(constraint[1] - constraint[0]) > threshold:\n",
+    "            relax_pose(pose, macrocycles=1)\n",
+    "            threshold += 5\n",
     "        set_constraints(pose, constraint[0], constraint[1])\n",
-    "        relax_pose(pose, macrocycles=1)\n",
-    "    score = scorefxn.score(pose)\n",
+    "    score = relax_pose(pose, macrocycles=1)\n",
     "    display(nv.show_rosetta(pose)) if show else None\n",
     "\n",
     "    return (pose, score) if not show else score\n",
