--- a/Genome541/Homework6/genome_hw_6.ipynb
+++ b/Genome541/Homework6/genome_hw_6.ipynb
@@ -118,13 +118,13 @@
    "source": [
     "WORK:\n",
     "\n",
-    "$(||\\boldsymbol{x}_i - \\boldsymbol{x}_j||_2)^2 = \\sum_{k=1}^{K}(x_{ik} - x_{jk})^2$\n",
-    "\n",
     "differentiate objective function with respect to $x_{ik}$:\n",
     "\n",
     "$\\frac{\\partial f(\\boldsymbol{x})}{\\partial x_{ik}} = \\frac{\\partial}{\\partial x_{ik}}\\sum_{i,j \\in D}(\\delta_{ij} - ||\\boldsymbol{x}_i - \\boldsymbol{x}_j||_2)^2$\n",
     "\n",
     "chain rule --> differentiate squared norm term:\n",
+    "\n",
+    "$(||\\boldsymbol{x}_i - \\boldsymbol{x}_j||_2)^2 = \\sum_{k=1}^{K}(x_{ik} - x_{jk})^2$\n",
     "\n",
     "$\\frac{\\partial}{\\partial x_{ik}} (||\\boldsymbol{x}_i - \\boldsymbol{x}_j||_2)^2 = \\frac{\\partial}{\\partial x_{ik}}\\sum_{l=1}^{K}(x_{il} - x_{jl})^2$\n",
     "\n",
@@ -134,7 +134,7 @@
     "\n",
     "$\\frac{\\partial}{\\partial x_{ik}} (\\delta_{ij} - ||\\boldsymbol{x}_i - \\boldsymbol{x}_j||_2)^2 = -2(\\delta_{ij} - ||\\boldsymbol{x}_i - \\boldsymbol{x}j||_2)(x_{ik} - x_{jk})$\n",
     "\n",
-    "answer:\n",
+    "final answer:\n",
     "\n",
     "$\\frac{\\partial f(\\boldsymbol{x})}{\\partial x_{ik}} = -2\\sum_{i, j \\in D}(\\delta_{ij} - ||\\boldsymbol{x}_i - \\boldsymbol{x}_j||_2)(x_{ik} - x_{jk})$"
    ]
