--- a/Genome541/Homework6/genome_hw_6.ipynb
+++ b/Genome541/Homework6/genome_hw_6.ipynb
@@ -6,20 +6,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import os\n",
     "PATH = \"/Users/tgoel/Downloads/Classes/GENOME/GENOME541/hw6/\"\n",
-    "# os.listdir(PATH) --> ['yeast_chrom7_counts.txt', 'spiral_counts.txt', 'spiral_true_points.txt']\n",
+    "\n",
+    "# os.listdir(PATH) --> ['yeast_chrom7_counts.txt', 'spiral_counts.txt', 'spiral_true_points.txt']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
     "\n",
     "def read_data(filename):\n",
     "    df = pd.read_csv(os.path.join(PATH + filename), sep='\\t')\n",
+    "    df.columns = [\"bead1\", \"bead2\", \"counts\"]\n",
     "    df[\"distance\"] = 10**3 * df[\"counts\"].astype(\"float16\")**-3 # convert the Hi-C counts to distances using the conversion relationship\n",
     "    df.drop(columns=[\"counts\"], inplace=True)\n",
     "    bead_ids = pd.concat([df[\"bead1\"], df[\"bead2\"]]).unique()\n",
     "    return df, bead_ids\n",
     "\n",
-    "data, ids = read_data('yeast_chrom7_counts.txt') # includes only pairwise distances from significant Hi-C counts (FDR 1%)\n",
-    "data.head()"
+    "data, ids = read_data(os.listdir(PATH)[0]) # includes only pairwise distances from significant Hi-C counts (FDR 1%)\n",
+    "data"
    ]
   },
   {
@@ -200,7 +210,7 @@
    "outputs": [],
    "source": [
     "# track a random point\n",
-    "point_hist = beads[np.random.randint(len(beads))].history\n",
+    "point_hist = beads[np.random.choice(list(beads.keys()))].history\n",
     "px.scatter_3d(x=[h[0] for h in point_hist], y=[h[1] for h in point_hist], z=[h[2] for h in point_hist], opacity=0.5).show()"
    ]
   },
@@ -228,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
