--- a/Genome541/Homework6/genome_hw_6.ipynb
+++ b/Genome541/Homework6/genome_hw_6.ipynb
@@ -23,7 +23,7 @@
     "def read_data(filename):\n",
     "    df = pd.read_csv(os.path.join(PATH + filename), sep='\\t')\n",
     "    df.columns = [\"bead1\", \"bead2\", \"counts\"]\n",
-    "    df[\"distance\"] = 10**3 * df[\"counts\"].astype(\"float16\")**-3 # convert the Hi-C counts to distances using the conversion relationship\n",
+    "    df[\"distance\"] = 10**3 * df[\"counts\"].astype(\"float32\")**-3 # convert the Hi-C counts to distances using the conversion relationship\n",
     "    df.drop(columns=[\"counts\"], inplace=True)\n",
     "    bead_ids = pd.concat([df[\"bead1\"], df[\"bead2\"]]).unique()\n",
     "    return df, bead_ids\n",
@@ -90,7 +90,7 @@
     "import plotly.express as px\n",
     "\n",
     "def plot_beads(beads):\n",
-    "    x, y, z = [bead.x for bead in beads], [bead.y for bead in beads], [bead.z for bead in beads]\n",
+    "    x, y, z = zip(*[(bead.x, bead.y, bead.z) for bead in beads])\n",
     "    if DIM3D == True:\n",
     "        px.scatter_3d(x=x, y=y, z=z, opacity=0.5).show()\n",
     "    else:\n",
@@ -211,7 +211,8 @@
    "source": [
     "# track a random point\n",
     "point_hist = beads[np.random.choice(list(beads.keys()))].history\n",
-    "px.scatter_3d(x=[h[0] for h in point_hist], y=[h[1] for h in point_hist], z=[h[2] for h in point_hist], opacity=0.5).show()"
+    "x, y, z = zip(*point_hist)\n",
+    "px.scatter_3d(x=x, y=y, z=z, opacity=0.5).show()"
    ]
   },
   {
