--- a/Genome541/Homework7/genome_hw_7.ipynb
+++ b/Genome541/Homework7/genome_hw_7.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# implement a single-nucleotide variant (SNV) caller"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -1188,7 +1197,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15f07c400>]"
+       "[<matplotlib.lines.Line2D at 0x15befc3d0>]"
       ]
      },
      "execution_count": 23,
