--- a/Genome541/Homework_10/genome_hw_10.ipynb
+++ b/Genome541/Homework_10/genome_hw_10.ipynb
@@ -22,9 +22,13 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "8a0f3c7a",
+   "id": "a4ed15c2",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. I am quite confident in the sequence alignment. The sequences are very similar and the alignment is very clear.\n",
+    "\n",
+    "2. I am pretty confident in the tree. There are many branches with high support."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,7 +47,13 @@
    "cell_type": "markdown",
    "id": "366211b2",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. I am not very confident with the sequence alignment because there are many gaps - the sequences are not very similar to each other.\n",
+    "\n",
+    "2. I am not very confident in the tree due to 1 and also low support in some branches.\n",
+    "\n",
+    "3. The standard phylogenetic model assumes that the sequences are independent and identically distributed. This is violated in this tree inference because the sequences are from the same virus and therefore are not independent."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,11 +83,30 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5e58d473",
    "metadata": {},
    "source": [
-    " "
+    "It chose the TIM+F+I model\n",
+    "\n",
+    "http://www.iqtree.org/doc/Substitution-Models#dna-models \n",
+    "\n",
+    "TIM = Transition model, AC=GT, AT=CG and unequal base freq\n",
+    "\n",
+    "+F = Empirical base frequencies. This is the default if the model has unequal base freq. In AliSim, if users neither specify base frequencies nor supply an input alignment, AliSim will generate base frequencies from empirical distributions.\n",
+    "\n",
+    "+I = Allowing for a proportion of invariable sites\n",
+    "\n",
+    "TIM+F+I = transition model (AC=GT, AT=CG, and unequal base freq), empirical base frequencies, and allowing for a proportion of invariable sites\n",
+    "\n",
+    "More data would probably change the model selection\n",
+    "\n",
+    "Rate parameters:  A-C: 1.00000  A-G: 1.09408  A-T: 0.10392  C-G: 0.10392  C-T: 4.28391  G-T: 1.00000\n",
+    "\n",
+    "Yes, the output corresponds to the model - AC=GT=1 and there is unequal base frequency\n",
+    "\n",
+    "I found it crazy how the logs say the data has 29903 nucleotide sites, but only 109 were not constant or invariant, and only 52 actually give informative variations to infer phylogenetic relationships."
    ]
   },
   {
@@ -99,11 +128,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2dfc8c08",
    "metadata": {},
    "source": [
-    " "
+    "see tree"
    ]
   },
   {
@@ -122,11 +152,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3a10c0de",
    "metadata": {},
    "source": [
-    " "
+    "There were 2 introductions into the skilled nursing facility. One \"took off.\" If we sampled more in the skilled nursing facility, we would probably find more introductions. \n",
+    "\n",
+    "I do not see any evidence of transmission from the nursing facility to the community, but I do see a bit of evidence from the conference to the community. There is 1 surveillance sequence that branches off a conference sequence.\n",
+    "\n",
+    "No - not confident\n",
+    "\n",
+    "I think the bootstrap values are low because there is very little variation in the data - the sequences are so similar to each other, so there is not much variation to infer phylogenetic relationships"
    ]
   },
   {
@@ -138,11 +175,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "72c357a6",
    "metadata": {},
    "source": [
-    " "
+    "I think what amazed me the most was how you can make accurate trees with many trees that have low support, and also are able to track the spread accurately through these low-confidence trees. I thought the time spent on different topics was perfect, especially for Bayesian inference - it was a great introduction. I think I would have liked to apply phylogenetics to more real-world data, but I'm glad you gave us the building blocks to do so on our own."
    ]
   }
  ],
